# shoyu

./: 1  Cargo.toml
examples/base_game/: bin.rs
src/: lib.rs
src/database/: error.rs  font.rs  images.rs  json.rs  load_funcs.rs  mod.rs
src/io/: event_cache.rs  io_controller.rs  joystick.rs  mod.rs
src/renderer2d/: mod.rs  pipeline.rs  resource_manager.rs  types.rs
src/renderer2d/particle/: json.rs  mod.rs  pipelines.rs
src/renderer2d/particle/glsl/: compute.glsl  frag.glsl  particle.glsl  vert.glsl
src/utils/: canvas.rs  hotbuffer.rs  image.rs  mod.rs  timer.rs
