[package]
name = "shoyu"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "=0.8.5"
image = "0.24"
dashi = {git = "https://github.com/JordanHendl/dashi", features = ["dashi-serde"]}
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
unzip3 = "1.0.0"
inline-spirv = {version = "0.2.1"}
sdl2 = {version = "0.37.0", features = ["bundled", "static-link", "raw-window-handle"]}
rusttype = "0.9.3"

[[bin]]
name = "base"
path = "examples/base_game/bin.rs"

[lib]
